--- a/app/views/guests/_guest_li.html.erb
+++ b/app/views/guests/_guest_li.html.erb
@@ -2,6 +2,6 @@
   <div class="view">
     <%= form_for_guest_status(guest) %>
 
-    <label><%= guest.description %></label>
+    <label><%= guest.name %></label>
   </div>
 <% end %>
