--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -8,7 +8,7 @@
   </header>
   <section class="main">
     <input class="toggle-all" type="checkbox">
-    <label for="toggle-all">Mark all as complete</label>
+    <label for="toggle-all">Mark all as present</label>
     <ul class="todo-list">
       <%= render :collection => @list.guests, :partial => "guests/guest_li", :as => :guest %>
     </ul>
