--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -17,6 +17,7 @@
         <div class="view">
           <%= form_for([@list, guest]) do |f| %>
             <%= f.check_box :status, :class => "toggle" %>
+            <%= link_to guest.name, list_guest_path %>
             <!-- <%= f.submit :style => "display: none" %> -->
             <%= f.submit "Change Attendance"%>
 
