--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -3,6 +3,7 @@
     <h1><%= @list.name %></h1>
     <%= form_for([@list, @guest]) do |f| %>
       <%= f.text_field :name, :class => "new-todo", :placeholder => (@guest.errors.full_messages_for(:name).first || "Enter a new guest...") %>
+      <% @guest.list_id = @list.id %>
       <%= f.submit :style => "display: none" %>
     <% end %>
   </header>
@@ -16,14 +17,15 @@
       <li class="<%= "completed" if guest.attending? %>">
         <div class="view">
           <%= form_for([@list, guest]) do |f| %>
-            <%= f.check_box :status, :class => "toggle" %>
-            <%= link_to guest.name, list_guest_path %>
+            <%= f.check_box :status %>
+
             <!-- <%= f.submit :style => "display: none" %> -->
             <%= f.submit "Change Attendance"%>
 
           <% end %>
 
-          <label><%= guest.name %></label>
+          <label><%= link_to guest.name, list_guest_path(guest) %>
+          </label>
         </div>
       </li>
       <% end %>
