Add sharedlist form to list#show page with collection select

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -32,13 +32,13 @@
       <% end %>
     </ul>
 
-    <form action="/sharedlists/new" method="post">
-    <%= form_for @sharedlist, url: "/sharedlists/new", method="post" do |f|%>
-        <%= f.collection_select(:user_id, @users, :id, :name) %>
-        <%= :list_id = @list.id %>
-        <%= :permission = :host%>
-        <input type="submit" value="Add Host">
+
+    <%= form_for @sharedlist do |f|%>
+    <%= f.collection_select(:user, User.all, :id, :username) %>
      <%= f.submit %>
+     <% end %>
+
+
   </section>
 
 
