--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -42,6 +42,9 @@
       <%= f.submit "Add A Host" %>
     <% end %>
 
+    <p>Hosts</p>
+    <%= @sharedlist.user%>
+
 
 
   </section>
@@ -52,5 +55,5 @@
 
   </footer>
 </section>
-<%= link_to 'Your Events', lists_path %> | <%= @sharedlist%>
+<%= link_to 'Your Events', lists_path %> |
 
