--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -42,9 +42,12 @@
       <%= f.submit "Add A Host" %>
     <% end %>
 
-    <p>Hosts
-      <%=@current_user%>
-    <%= SharedList.last.user.username%></p>
+<!-- Find out how to show current_user by name as well as getting at @sharedlist correctly -->
+    <!-- <p>Hosts -->
+<!--       # <%=@current_user%>
+ --><!--     SharedList.last.user.username%>
+ --><!--     @sharedlist.user.username%>
+ -->    <!-- </p> -->
 
 
 
@@ -56,5 +59,5 @@
 
   </footer>
 </section>
-<%= link_to 'Your Events', lists_path %> |
+<%= link_to 'All Events', lists_path %> |
 
