--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -3,6 +3,7 @@
     <h1><%= @list.name %></h1>
     <%= form_for([@list, @guest]) do |f| %>
       <%= f.text_field :name, :class => "new-todo", :placeholder => (@guest.errors.full_messages_for(:name).first || "Enter a new guest...") %>
+      <!-- field_with_error will not show for guest but shows in index for list?! -->
       <% @guest.list_id = @list.id %>
       <%= f.submit :style => "display: none" %>
     <% end %>
