Add seeds to seed file, start code for viewing join table attributes.

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -49,7 +49,7 @@
  --><!--     SharedList.last.user.username%>
  --><!--     @sharedlist.user.username%>
  -->    <!-- </p> -->
-
+  <p><%= show_hosts(@list) %></p>
 
 
   </section>
