--- a/app/assets/stylesheets/guestlist-base.css
+++ b/app/assets/stylesheets/guestlist-base.css
@@ -207,8 +207,8 @@ label[for='toggle-all'] {
 }
 
 .todo-list li.completed label {
-  color: #818387;
-  text-decoration: line-through;
+  color: #d9d9d9;
+	text-decoration: line-through;
 }
 
 .todo-list li .destroy {
