AJAX Index of lists completed. Req 1 done

--- a/app/assets/stylesheets/guestlist-base.css
+++ b/app/assets/stylesheets/guestlist-base.css
@@ -1,4 +1,4 @@
-html,
+/*html,
 body {
   margin: 0;
   padding: 0;
@@ -375,4 +375,4 @@ html .clear-completed:active {
   .filters {
     bottom: 10px;
   }
-}
+}*/
