--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,30 +1,4 @@
- <section class="todoapp">
-  <header class="header">
-    <h1>Events</h1>
-    <%= form_for(@list) do |f| %>
-      <%= f.text_field :name, :class => "new-todo", :placeholder => (@list.errors.full_messages_for(:name).first || "Enter a new event name...") %>
-      <%= f.submit :style => "display: none" %>
-    <% end %>
-</form>
-  </header>
-
-  <section class="main">
-    <input class="toggle-all" type="checkbox">
-    <label for="toggle-all">Mark all as complete</label>
-    <ul class="todo-list">
-      <% @lists.each do |list| %>
-      <li>
-        <div class="view">
-          <label><%= link_to list.name, list_path(list) %> guests invited: <%= list.head_count %>  </label>
-        </div>
-      </li>
-      <% end %>
-    </ul>
-
-
-  </section>
-  <footer class="footer">
-    <div>Biggest Event: <%= List.most_invited.upcase %></div>
-  </footer>
-</section>
-
+<div id='all-events'>
+  <h3>Click the button to view all lists.</h3>
+  <%= button_tag "View all lists", class: 'load_events'%>
+</div>
