--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -42,7 +42,7 @@
 
   <section class="main">
     <p>
-    <%= link_to "Turn On Comments", list_comments_path(@list) , :class => "load_comments"%>
+    <%= link_to "All Events", list_comments_path(@list) , :class => "load_comments"%>
 
     </p>
     <div class="comments">
