Address issue of ajax created links not being responsive after once use

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,4 +1,4 @@
 <div id='all-events'>
   <h3>Click the button to view all lists.</h3>
-  <%= button_tag "View all lists", class: 'load_events'%>
+  <%= link_to "View all lists", lists_url, class: 'load_events'%>
 </div>
