--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,5 +13,6 @@
       <%= yield %>
     </div>
   </body>
+  <%= link_to "View all lists", lists_url, class: 'load_events'%>
   <%= link_to 'Logout', logout_path %>
 </html>
