Add comment works with jQuery/ajax Post format

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -8,5 +8,5 @@
   <%= f.text_field :content %>
   <!-- <%# @comment.user = :current_user %> -->
   <!-- <p><%= f.submit  :data => { disable_with: false }%></p> -->
-  <p><%= f.submit "Add Comment" %></p>
+  <p><%= f.submit "Add Comment" , :data => { disable_with: false }%></p>
 <% end %>
