--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -10,5 +10,5 @@
 
 <%= form_for ([@list, @guest])do |f|  %>
   <%= f.text_field :name %>
-  <p><%= f.submit "Add guest" %></p>
+  <p><%= f.submit "Add guest", :data => { disable_with: false } %></p>
 <% end %>
