Change links toa nd from guest nad comment pages to rails generated

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -10,3 +10,5 @@
   <!-- <p><%= f.submit  :data => { disable_with: false }%></p> -->
   <p><%= f.submit "Add Comment" , :data => { disable_with: false }%></p>
 <% end %>
+
+<a href='/lists/<%=@list.id%>/guests'>View Event Guests</a>
