New event form working

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,15 @@
     <title>GuestList</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
 
   <body>
     <div id="app-container" class="container">
+      <div id="list-container">
       <%= yield %>
+    </div>
     </div>
   </body>
   <%= link_to "View All Events", lists_url, class: 'load_events'%>
