--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -12,7 +12,7 @@
  *
  *= require_tree .
  *= require_self
- *= require 'guestlist-base'
- *= require 'lists'
+ */
 
-*/
+@import "bootstrap-sprockets"
+@import "bootstrap"
