--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
     </div>
     </div>
   </body>
-  <%= link_to "View All Events", lists_url, class: 'load_events'%>
-  <%= link_to 'Logout', logout_path %>
+  <footer>
+    <%= link_to "View All Events", lists_url, class: 'load_events'%>
+    <%= link_to 'Logout', logout_path %>
+  </footer>
 </html>
