--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -3,7 +3,7 @@
   <%= link_to "View All Events", lists_url, class: 'load_events'%>
 </div>
 
-<a href="/lists/new">Create a New Event</a>
+<!-- <a href="/lists/new">Create a New Event</a> -->
 <br>
 
 <!-- <%= form_for(@list) do |f| %>
