change list index text

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,5 @@
 <div id='all-events'>
-  <h3>Click the button to view all lists.</h3>
+  <h3>Welcome.</h3>
   <%= link_to "View All Events", lists_url, class: 'load_events'%>
 </div>
 
