css updates and styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,14 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
+
     <%= javascript_include_tag 'application' %>
   </head>
+  <Header id="header">
+    <span><h1>The Guest List</h1>
+    <h3>Know Who's Who</h3></span>
+    <hr/>
+  </Header>
 
   <body class="main">
     <div id="app-container" class="container">
